<resources>
    <string name="app_name">Garage</string>
    <string name="ch_lng">Choose language</string>
    <string name="ch_country">Choose country</string>
    <string name="continuee">Continue</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forget_password">forget password ?</string>
    <string name="continuing_as_a_guest">Continuing as a guest</string>
    <string name="nationality">nationality</string>
    <string name="phone_number">phone number</string>
    <string name="document_type_definition">Document Type Definition</string>
    <string name="country_of_personal_proof">Country of personal proof</string>
    <string name="done">Done</string>
    <string name="code">CODE</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="reservations">Reservations</string>
    <string name="contact_us">Contact us</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="logout">Logout</string>
    <string name="cars">Cars</string>
    <string name="trucks">Trucks</string>
    <string name="rent">Rent</string>
    <string name="maintenance">Maintenance</string>
    <string name="tank">Motorcycle</string>
    <string name="choose">Choose</string>
    <string name="day_sar">SAR/Day</string>
    <string name="rating">Rating</string>
    <string name="resv">Reserve</string>
    <string name="notification">Notifications</string>
    <string name="ch">Choose</string>
    <string name="something">Error : something went haywire try again later</string>
    <string name="ch_count">Choose country</string>
    <string name="load_country">Loading countries...</string>
    <string name="load_nat">Load nationalities...</string>
    <string name="accept">accept</string>
    <string name="cancel">cancel</string>
    <string name="gps_open">The application will turns on GPS to determine your location</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="bank_accounts">Bank accounts</string>
    <string name="whatsapp">whatsapp</string>
    <string name="twitter">twitter</string>
    <string name="facebook">facebook</string>
    <string name="instagram">instagram</string>
    <string name="gmail">gmail</string>
    <string name="wait">Waite...</string>
    <string name="sending">Sending...</string>
    <string name="pls_install_wapp">Plz install whatsapp</string>
    <string name="send_succ">Successfully sent</string>
    <string name="name_req">Name is required</string>
    <string name="email_req">Email is required</string>
    <string name="inv_email">Invalid email</string>
    <string name="subject_req">Subject is required</string>
    <string name="msg_req">Message is required</string>
    <string name="account_name">Account name</string>
    <string name="account_IBAN">Account IBAN</string>
    <string name="account_bank_name">Account Bank Name</string>
    <string name="account_number">Account Number</string>
    <string name="no_car">No Cars to display</string>
    <string name="no_motorcycles_to_display">No Motorcycles to display</string>
    <string name="no_trucks_to_display">No Trucks to display</string>
    <string name="size">Size</string>
    <string name="si_su">Sign in or create a new account.</string>
    <string name="res">Reservation</string>
    <string name="search">Search</string>
    <string name="book_loc">Booking Location</string>
    <string name="f_date">From Date</string>
    <string name="t_date">To Date</string>
    <string name="view_location">Location</string>
    <string name="pass_req">Password is required</string>
    <string name="signin">SigningIn...</string>
    <string name="upload_image">Upload image</string>
    <string name="forget_password2">Recover Account</string>
    <string name="recover_pass">Recover account.We will send you a link to change your password</string>
    <string name="reset_password">Reset password</string>
    <string name="update">Update</string>
    <string name="upd_img">Updating image...</string>
    <string name="load_city">Load cities...</string>
    <string name="phone_req">Phone number is required</string>
    <string name="inv_phone">Invalid phone number</string>
    <string name="sel_per_img">Choose image profile</string>
    <string name="ch_doc_img">Choose document file</string>
    <string name="ch_city">Choose city</string>
    <string name="ch_nationality">Choose nationality</string>
    <string name="signing_up">Signing Up...</string>
    <string name="em_ph_exist">Email or phone number are exist</string>
    <string name="logging_out">Logging out...</string>
    <string name="rating2">Rating...</string>
    <string name="eval_succ">Successfully Evaluating.</string>
    <string name="new_pass">New Password</string>
    <string name="close">Close</string>
    <string name="upd_name">Update Name</string>
    <string name="upd_phone">Update Phone number</string>
    <string name="upd_email">Update Email</string>
    <string name="upd_password">Update Password</string>
    <string name="old_pass">Old password</string>
    <string name="uptng_name">Updating name...</string>
    <string name="uptng_phone">Updating phone number...</string>
    <string name="uptng_email">Updating email...</string>
    <string name="updtng_pass">Updating password...</string>
    <string name="newpass_req">New password is required</string>
    <string name="upd_succ">Updated successfully</string>
    <string name="wrong_oldpass">incorrect old password</string>
    <string name="choose_cities">Choose city</string>
    <string name="choose_nationality">Choose nationality</string>
    <string name="updng_city">Updating city...</string>
    <string name="updng_nationality">Updating nationality...</string>
    <string name="date_old">Selected date is too old</string>
    <string name="book">Booking</string>
    <string name="sel_sd">Select start date</string>
    <string name="enter_resr_add">Enter your reservation address</string>
    <string name="sel_ed">Select end date</string>
    <string name="transformation">Transformation</string>
    <string name="transfer_amount">Transfer amount</string>
    <string name="transfer_photo">transfer photo</string>
    <string name="per_den">Permission denied to use photos</string>
    <string name="date_notav">Cannot reserve ,data not available</string>
    <string name="amo_req">Amount is required</string>
    <string name="sel_trans_img">Select transfer image</string>
    <string name="bokng">Booking...</string>
    <string name="bok_suc">Booking successfully</string>
    <string name="res_acc">Reservation accepted</string>
    <string name="res_can">Reservation canceled</string>
    <string name="no_not">There are no notifications to display</string>
    <string name="duration">Duration</string>
    <string name="dat">Date</string>
    <string name="car_address">Address</string>
    <string name="total">Total</string>
    <string name="delete">Delete</string>
    <string name="no_reserve">There are no reservations to display</string>
    <string name="current">Current</string>
    <string name="previous">Previous</string>
    <string name="upd_rese">Updating reservation...</string>
    <string name="day">Days</string>
    <string name="sar">SAR</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="cnt_edit">Cannot edit your reservation</string>
    <string name="cnt_cancel">Cannot delete your reservation</string>
    <string name="deltng_resrv">Deleting reservation...</string>
    <string name="ok">ok</string>

</resources>
