<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gps_bg"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="15sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center"
        android:text="@string/forget_password2"
        android:textColor="@color/white"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@color/gray1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/recover_pass"
        android:layout_marginBottom="10dp"

        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"

        >
        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="#00000000"
            android:text="@string/ok"
            android:textColor="@color/press_color"
            />

    </LinearLayout>

</LinearLayout>