<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_marginBottom="5dp"
    >



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:text="@string/account_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/txt_account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="2"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:textColor="@color/text_color"
            android:textSize="14sp" />



    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/account_IBAN"
        />

    <TextView
        android:id="@+id/txt_account_IBAN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="2"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        />


    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/account_bank_name"


        />

    <TextView
        android:id="@+id/txt_account_bank_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:textSize="14sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/text_color"

        />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/account_number"

        />

    <TextView
        android:id="@+id/txt_account_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:textColor="@color/text_color"
        android:layout_marginTop="5dp"
        android:textSize="14sp" />


</LinearLayout>