<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:scrollbars="none"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"


    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:civ_border_color="@color/white"
        app:civ_border_width="2dp"
        android:layout_gravity="center_horizontal" android:src="@drawable/user_profile"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="13sp"
        android:text="@string/nationality"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sel_btn"
        android:layout_marginBottom="5dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        >
        <Spinner
            android:id="@+id/spinner_nationality"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            app:backgroundTint="@color/white"
            >

        </Spinner>
    </FrameLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="13sp"
        android:text="@string/name"
        />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edt_bg"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:inputType="textPersonName"
        android:textColor="@color/text_color"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="13sp"
        android:text="@string/phone_number"
        android:layout_marginTop="5dp"
        />
    <com.lamudi.phonefield.PhoneInputLayout
        android:id="@+id/edt_phone_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        >

    </com.lamudi.phonefield.PhoneInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layoutDirection="rtl"

        >

        <EditText
            android:id="@+id/edt_phone_code"
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="40dp"
            android:background="@drawable/edt__phone_code_bg"
            android:singleLine="true"
            android:inputType="phone"
            android:textColor="@color/text_color"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginLeft="5dp"
            android:hint="@string/code"
            android:textAllCaps="true"
            android:textColorHint="@color/text_color"

            />
        <EditText
            android:id="@+id/edt_phone_number"

            android:layout_width="0dp"
            android:layout_weight=".76"
            android:layout_height="40dp"
            android:background="@drawable/edt__phone_num_bg"
            android:singleLine="true"
            android:inputType="phone"
            android:textColor="@color/text_color"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginLeft="5dp"

            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="13sp"
        android:text="@string/email_address"
        />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edt_bg"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:textColor="@color/text_color"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="13sp"
        android:text="@string/password"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edt_bg"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textColor="@color/text_color"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"


        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="13sp"
        android:text="@string/document_type_definition"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:orientation="horizontal"

        >
       <com.github.siyamed.shapeimageview.RoundedImageView
           android:id="@+id/uploaded_image"
           android:layout_width="85dp"
           android:layout_height="85dp"
           app:siBorderType="stroke"
           app:siRadius="5dp"
           app:siBorderColor="@color/gray1"
           app:siBorderWidth="1dp"
           android:src="@color/press_color"
           />

        <LinearLayout
            android:id="@+id/ll_upload_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            tools:ignore="RtlCompat">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:layout_gravity="center_vertical"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="@string/upload_image"
                android:clickable="false"
                android:longClickable="false"
                />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:src="@drawable/upload_icon"
                android:padding="6dp"
                android:clickable="false"
                android:longClickable="false"
                />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="13sp"
        android:text="@string/country_of_personal_proof"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sel_btn"
        android:layout_marginBottom="5dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        >
        <Spinner
            android:id="@+id/spinner_city"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            app:backgroundTint="@color/white"
            >

        </Spinner>
    </FrameLayout>
    <Button
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_bg"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textAllCaps="true"
        android:text="@string/done"
        android:layout_marginBottom="15dp"
        />

</LinearLayout>
</ScrollView>