<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ReservationActivity"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:background="@drawable/login_bg"
    android:scrollbars="none"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:contentInsetEnd="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:singleLine="true"
                        android:text="@string/forget_password2"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                    <ImageView
                        android:id="@+id/image_back"
                        android:layout_width="56dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/black_back_arrow"
                        android:padding="18dp"

                        />
                </RelativeLayout>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="35dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:text="@string/recover_pass"
            />


        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edt_bg"
            android:layout_marginTop="20dp"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:textColor="@color/text_color"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/email_address"
            />
        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_bg"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textAllCaps="true"
            android:text="@string/reset_password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:letterSpacing=".1"
            />
    </LinearLayout>
</ScrollView>